# cctv-rasp

./: .gitignore  README.md
cmake/toolchains/: raspi-aarch64.cmake
docs/: architecture.md  checklist.md  cross-compile-rail-media.md  hardware-selection.md  media-server-design.md  onvif-server.md  picam-cross-compile-flow.md  plan.md  profile-manager-plan.md
hardware-control/: CMakeLists.txt  README.md
hardware-control/src/: config.cpp  config.h  main.cpp  pan_tilt.cpp  pan_tilt.h  pca9685.cpp  pca9685.h  servo_controller.cpp  servo_controller.h  state_store.cpp  state_store.h
media-server/: CMakeLists.txt  README.md
media-server/src/: config.cpp  config.h  control_server.cpp  control_server.h  main.cpp  media_server.cpp  media_server.h  pipeline.cpp  pipeline.h  profiles.cpp  profiles.h
onvif-server/: CMakeLists.txt  README.md
onvif-server/src/: app.cpp  app.h  config.cpp  config.h  discovery_server.cpp  discovery_server.h  http_client.cpp  http_client.h  http_server.cpp  http_server.h  main.cpp  ptz_service.cpp  ptz_service.h  rail_client.cpp  rail_client.h  soap_services.cpp  soap_services.h  types.h  utils.cpp  utils.h
